--- a/.github/workflows/tests_on_push.yml
+++ b/.github/workflows/tests_on_push.yml
@@ -12,5 +12,7 @@
           with:
             python-version: 3.10.4
             architecture: 'x64'
+        - name: Install requirements
+          run: pip install -r requirements.txt
         - name: Tests
           run: python postgres.py
