--- a/.github/workflows/tests_on_push.yml
+++ b/.github/workflows/tests_on_push.yml
@@ -15,4 +15,4 @@
         - name: Install requirements
           run: pip install -r requirements.txt
         - name: Tests
-          run: python postgres.py
+          run: docker-compose up
