--- a/.github/workflows/tests_on_push.yml
+++ b/.github/workflows/tests_on_push.yml
@@ -15,8 +15,8 @@
         - name: Install requirements
           run: pip install -r requirements.txt
         - name: Build image
-          run: docker build -t postgres-app
+          run: docker build -t postgres-app .
         - name: Docker-compose build
-          run: docker-compos build ./ABB
+          run: docker-compos build
         - name: Docker-compose up
           run: docker-compose up
