--- a/.github/workflows/tests_on_push.yml
+++ b/.github/workflows/tests_on_push.yml
@@ -16,3 +16,5 @@
           run: docker build -t postgres-app .
         - name: Docker-compose build
           run: docker-compose build
+        - name: Docker-compose up
+          run: docker-compose up
