--- a/.github/workflows/tests_on_push.yml
+++ b/.github/workflows/tests_on_push.yml
@@ -16,3 +16,17 @@
           run: docker build -t postgres-app .
         - name: Docker-compose build
           run: docker-compose build
+    build_and_pub:
+      needs: [ run_tests ]
+      runs-on: [ubuntu-latest]
+      env:
+        LOGIN: ${{ secrets.DOCKER_LOGIN }}
+        NAME: ${{ secrets.DOCKER_NAME }}
+      steps:
+        - name: Login to docker
+          run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
+        - uses: actions/checkout@master
+        - name: Build image
+          run: docker-compose build -t $LOGIN/$NAME:${GITHUB_REF:11}
+        - name: Push image to docker
+          run: docker push $LOGIN/$NAME:${GITHUB_REF:11}
