--- a/.github/workflows/tests_on_push.yml
+++ b/.github/workflows/tests_on_push.yml
@@ -27,6 +27,6 @@
           run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
         - uses: actions/checkout@master
         - name: Build image
-          run: docker-compose build -t $LOGIN/$NAME:${GITHUB_REF:11}
+          run: docker build -t $LOGIN/$NAME:${GITHUB_REF:11}
         - name: Push image to docker
           run: docker push $LOGIN/$NAME:${GITHUB_REF:11}
